[package]
name = "brag"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0"
dirs = "3.0"
dialoguer = "0.10"
console = "0.15"
tempfile = "3.3"
